# tinyrulefilter

./: CMakeLists.txt  README.md
demo/: CMakeLists.txt  test  test.cpp
include/: filterengine.h  ruleanalysis.h
src/: CMakeLists.txt  build.sh  filterengine.cpp  ruleanalysis.cpp  test.cpp
