PROJECT(eventdetect)
SET(PROJECT_ROOT_PATH "${CMAKE_SOURCE_DIR}")
SET(LIBRARY_OUTPUT_PATH "${PROJECT_ROOT_PATH}/lib/")
INCLUDE_DIRECTORIES("${PROJECT_ROOT_PATH}/include/")
SET(EXECUTABLE_OUTPUT_PATH "${PROJECT_ROOT_PATH}/demo/")
INCLUDE_DIRECTORIES("${PROJECT_ROOT_PATH}/thirdparty/include")
LINK_DIRECTORIES("${PROJECT_ROOT_PATH}/thirdparty/lib")
LINK_DIRECTORIES("${PROJECT_ROOT_PATH}/lib")
ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(demo)


